# yaml

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  lib.ring  main.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  testCI.yml  ubuntu_build.yml  windows_build.yml
examples/: 01-basic-file-load.ring  01.yaml  02-basic-string-parse.ring  03-simple-data-access.ring  04-object-access.ring  05-array-access.ring  06-complex-nested.ring  07-error-handling.ring  08-large-data.yaml  08-large-file-example.ring  09-mixed-types.ring  10-advanced-paths.ring
lib/macos/amd64/: libring_yaml.dylib
lib/macos/arm64/: libring_yaml.dylib
src/: ring_yaml.c  yaml.ring
src/utils/: color.ring  install.ring  uninstall.ring
tests/: YAML_test.ring  test.yaml
